# schemata

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yaml
commons/: model.py  special_type.py  type.py  utils.py
examples/: example1.py
src/schemata/commons/: exception.py  utils.py
src/schemata/examples/: example1.py
src/schemata/translator/: dummy.py  translator.py
test/: test_resolve_dependency.py  test_resolve_inheritance.py  test_translator.py  test_utils.py
